@@ -32,7 +32,7 @@ from datetime import datetime
 from uuid import uuid4
 
 from flask import (Flask, Config as FlaskConfig, current_app, g as flask_g,
-                   jsonify, Blueprint, redirect, url_for)
+                   jsonify, Blueprint, redirect, url_for, abort)
 from flask.helpers import get_env
 from flask_babel import Babel, gettext
 
@@ -880,10 +880,16 @@ def create_app(config_name=None, config_extra=None):
     # Per controller setup and handlers
     app.setup_controllers()
 
-    if 'selfservice' in app.enabled_controllers:
-        @app.route('/')
-        def index():
+    @app.route('/')
+    def index():
+        site_root_redirect = config["SITE_ROOT_REDIRECT"]
+        if site_root_redirect:
+            return redirect(site_root_redirect)
+
+        if 'selfservice' in app.enabled_controllers:
             return redirect(url_for('selfservice.index'))
+
+        return abort(404)
 
     # Post handlers
     app.teardown_request(app.finalise_request)
